service-loadBalancer-networking/cilium/hubble/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata: 
  name: app-policy
spec: 
  endpointSelector:
    matchLabels:
      app: backend 
  ingress: 
    - fromEndpoints:
        - matchLabels:
            app: frontend
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app: db
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
